# SimpleSocketProtocol

./: .cproject  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
VS2017/: VS2017.sln
VS2017/VS2017/: VS2017.vcxproj  VS2017.vcxproj.filters
arduino/: .project  README.md  fb_allocator.c  ssp.h  ssp_com.c  ssp_common_p.c  ssp_fault.c
example/: CMakeLists.txt  simple_example.cpp
example/arduino/: arduino.ino  copysrc.bat  fb_allocator.h  ssp_common.cpp  ssp_hal_mem_buf.c  ssp_opt.h  ssp_osal.h  ssp_osal_std.cpp  ssp_util.c  ssp_util.h
example/linux/: ssp_hal_localhost.c  ssp_osal_unix.c
example/windows/: main.cpp  serialize.h  serialize_example.cpp  simple_example.cpp
port/: CMakeLists.txt  ssp_hal_windows.c  ssp_opt_cus.h  ssp_osal_no_os.c
port/hal/arduino/: ssp_hal_arduino.cpp
port/hal/linux/: ssp_hal_localhost.c
port/osal/linux/: ssp_osal_unix.c
port/osal/windows/: ssp_osal_windows.c
ssp/: CMakeLists.txt  ssp.c  ssp_com.c  ssp_com.h  ssp_common.h  ssp_common_p.h  ssp_crc.c  ssp_crc.h  ssp_fault.h  ssp_hal.h  ssp_opt.h  ssp_osal.h
